corrected the issue with contact on ios

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,9 +4,6 @@ html {
 }
 
 body {
-    scroll-behavior: smooth;
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -1072,15 +1069,19 @@ body {
 
     .container-contato .whats img {
         width: 40px;
+        height: 40px;
     }
     .container-contato .fb img {
         width: 40px;
+        height: 40px;
     }
     .container-contato .email img {
         width: 40px;
+        height: 40px;
     }
     .container-contato .phone img {
         width: 35px;
+        height: 35px;
     }
 
     .container-contato .whats p {
